Adds all the patterns and new files

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,11 @@ patternbot:
 
 patternbot:
   font_url: "http://fonts.googleapis.com/css?family=Cabin:400,400i,700|Playfair+Display:400,700"
+  colors:
+    background: "--color-secondary-light"
+    accent: "--color-neutral-dark"
+    patterns:
+      brand.logos: "--color-accent"
   rationales:
     typefaces.primary:  |
       Playfair is the primary typeface that i selected because i wanted to have a unique and clean serif type for my primary typeface. Playfair will be used for all the body copy.
