--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,12 @@ patternbot:
       Cabin is the secondary typeface that i chose because i wanted a classic and clean sans-serif font for all the headings, buttons, banners, etc.
     colors.secondary:  |
       The secondary colour is neutral black because this will highlight the text to make it stand out on the greens.
+
+collections:
+  products:
+    output: true
+defaults:
+  - scope:
+      path: _products
+    values:
+      layout: product
