--- a/_patterns/forms/config.yml
+++ b/_patterns/forms/config.yml
@@ -21,5 +21,5 @@ patterns:
       These fields are to input your phone number and email in the form.
   textarea:
     title: "Text Area"
-    descriptions: |
+    description: |
       This field is only the be used with a form to add a message attached with the gift.
