--- a/_patterns/buttons/config.yml
+++ b/_patterns/buttons/config.yml
@@ -7,7 +7,7 @@ patterns:
     fields:
       - name: text
         type: string
-        example: "See collection!"
+        example: "See collection"
       - name: url
         type: url
         example: "/products/"
@@ -19,7 +19,7 @@ patterns:
     fields:
       - name: text
         type: string
-        example: "See collection!"
+        example: "See collection"
       - name: url
         type: url
         example: "/products/"
@@ -31,7 +31,7 @@ patterns:
     fields:
       - name: text
         type: string
-        example: "See collection!"
+        example: "See collection"
       - name: url
         type: url
         example: "/products/"
