--- a/_patterns/header/config.yml
+++ b/_patterns/header/config.yml
@@ -1,3 +1,3 @@
 title: "Header"
 description: |
-  This will be the first page on the website when they users come on the site. This is to be used only as the main navigation of the website. This will link to the other pages of the website.
+  This will be the first pattern on the website. This is to only be used at the very top of each page. This will link to the other pages of the website.
